# ros2-slam-workspace

./: README.md
src/gg_packs/csicsko_mk2/: CMakeLists.txt  package.xml
src/gg_packs/csicsko_mk2/description/: inertial_macros.xacro  lidar.xacro  materials.xacro  robot.urdf.xarco  robot_core.xacro
src/gg_packs/csicsko_mk2/launch/: rplidar_a3_csicsko_mk2_launch.py  rsp.launch.py
src/gg_packs/csicsko_mk2/worlds/: empty.world
