<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>csicsko_mk2</name>
    <version>0.0.1</version>
    <description>Csicsko robot MK2 3D model description files, by using URDF and Xacro</description>
    <maintainer email="fgarmaz@outlook.com">filip</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
          <build_type>ament_cmake</build_type>
    </export>
</package>
